--- a/languages/en-GB/pr.json
+++ b/languages/en-GB/pr.json
@@ -1,6 +1,11 @@
 {
-	"dkim-success": "DKIM register request has passed. Please enter your desired username and password in the following form. You can also save the UUID displayed below to register later",
-	"dkim-pending": "Your DKIM register request needs approval from the administrator. Please return to this page and retry later. It's suggested that you save the UUID displayed below to retry later",
+	"dkim-success": "DKIM register request has passed. Please enter your desired username and password in the following form. You can also save this page's web address to register later",
+	"dkim-pending": "Your DKIM register request needs approval from the administrator. Please return to this page and retry later. It's suggested that you save this page's web address to retry later",
+	"dkim-summary-label": "Click here to see DKIM verify result",
+	"dkim-details.signing-domain": "Signing Domain",
+	"dkim-details.to": "To",
+	"dkim-details.result": "Verify Result",
+	"dkim-details.comment": "Comment",
 	"uuid-label": "UUID",
 	"upload.file": "Choose file to upload",
 	"upload.submit": "submit"
