--- a/languages/zh-CN/pr.json
+++ b/languages/zh-CN/pr.json
@@ -7,6 +7,7 @@
 	"dkim-details.to": "发件目标",
 	"dkim-details.result": "验证结果",
 	"dkim-details.comment": "注释",
+	"register-allow-subdomain": "注意: 我们允许子域名匹配，例如 math.pku.edu.cn 匹配 pku.edu.cn",
 	"register-email-domains-heading": "本站允许注册的邮件域名",
 	"register-email-domains-type": "类型",
 	"register-email-domains-domain": "域名",
