--- a/languages/en-GB/pr.json
+++ b/languages/en-GB/pr.json
@@ -7,6 +7,9 @@
 	"dkim-details.to": "To",
 	"dkim-details.result": "Verify Result",
 	"dkim-details.comment": "Comment",
+	"captcha-noscript-error": "Sorry, Captcha requires JavaScript",
+	"captcha-label": "Please fill in the following CAPTCHA",
+	"captcha-submit": "Submit",
 	"register-allow-subdomain-2": "Note: we allow subdomain matches, i.e. stu.pku.edu.cn and hsc.pku.edu.cn matches pku.edu.cn, mails.tsinghua.edu.cn matches tsinghua.edu.cn",
 	"register-email-domains-heading": "Email domains allowed for this site",
 	"register-email-domains-type": "Type",
