--- a/languages/zh-CN/pr.json
+++ b/languages/zh-CN/pr.json
@@ -7,6 +7,9 @@
 	"dkim-details.to": "发件目标",
 	"dkim-details.result": "验证结果",
 	"dkim-details.comment": "注释",
+	"captcha-noscript-error": "抱歉，验证码需要 JavaScript",
+	"captcha-label": "请填写下面的验证码",
+	"captcha-submit": "提交",
 	"register-allow-subdomain-2": "注意: 我们允许子域名匹配，例如 stu.pku.edu.cn 和 hsc.pku.edu.cn 匹配 pku.edu.cn， mails.tsinghua.edu.cn 匹配 tsinghua.edu.cn",
 	"register-email-domains-heading": "本站允许注册的邮件域名",
 	"register-email-domains-type": "类型",
