--- a/languages/en-GB/pr.json
+++ b/languages/en-GB/pr.json
@@ -7,6 +7,7 @@
 	"dkim-details.to": "To",
 	"dkim-details.result": "Verify Result",
 	"dkim-details.comment": "Comment",
+	"captcha-prompt": "This request requires a CAPTCHA, please go to page %1 to fill in the CAPTCHA",
 	"captcha-noscript-error": "Sorry, Captcha requires JavaScript",
 	"captcha-label": "Please fill in the following CAPTCHA",
 	"captcha-submit": "Submit",
