--- a/languages/zh-CN/pr.json
+++ b/languages/zh-CN/pr.json
@@ -7,6 +7,7 @@
 	"dkim-details.to": "发件目标",
 	"dkim-details.result": "验证结果",
 	"dkim-details.comment": "注释",
+	"captcha-prompt": "此请求需要填写验证码，请到 %1 页面下填写验证码",
 	"captcha-noscript-error": "抱歉，验证码需要 JavaScript",
 	"captcha-label": "请填写下面的验证码",
 	"captcha-submit": "提交",
